--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ function loadImages(i){
 	  var path ='css/img/slide/report/' +i + '.jpg';
 	  
 	 var photo=document.createElement('span')
-	 photo.innerHTML='<a href="'+path+'"  class="img-size" data-fancybox="images"><img src ="'+path+'" class="image"/></a>';
+	 photo.innerHTML='<a href="'+path+'"  class="img-size" data-fancybox="gallery"><img src ="'+path+'" class="image"/></a>';
 		imgs.appendChild(photo);
 		 
 	 }
