--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 			<div class="social">
 			<div class="header">Мы в соцсетях</div>
 				<div class="ico-list">
-					<a href="" target="_blank"><div class="fb icon-social"></div></a>
+					<a href="https://www.facebook.com/sdv18" target="_blank"><div class="fb icon-social"></div></a>
 					<a href="https://vk.com/tvk_production" target="_blank"><div class="vk icon-social"></div></a>
 					<a href="https://www.instagram.com/tvk_production/" target="_blank"><div class="in icon-social"></div></a>
 					<a href="https://vimeo.com/user68061658" target="_blank"><div class="vm icon-social"></div></a>
