--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<h1>О нас</h1>
 					<div class="sub-text">
 						<div class="sb">
-							Привет! Мы, TVK_production - молодые и амбициозные люди, смотрящие на мир сквозь объектив фото и видео камеры! С 2012 года мы стремимся к постоянному развитию. Наши клиенты: "Росводоконал-Краснодар", МТС, ЛеруаМерлен, "Суши-Мастер", "Росс Дент", HARAT'S PUB, Kargill, футбольный клуб "Краснодар". С радостью реализуем и Ваш проект! Пишите, звоните!
+							Привет! Мы, TVK_production - молодые и амбициозные люди, смотрящие на мир сквозь объектив фото и видео камеры! С 2012 года мы стремимся к постоянному развитию. Наши клиенты: Росводоконал-Краснодар, МТС, ЛеруаМерлен, Суши-Мастер, Росс Дент, HARAT'S PUB, Kargill, футбольный клуб "Краснодар". С радостью реализуем и Ваш проект! Пишите, звоните!
 						</div>
 					</div>
 				</div>
@@ -73,7 +73,7 @@
 	<div class="gheader">ФОТОГАЛЛЕРЕЯ</div>
 		<div class="report">
 			<div class="header">Репортажная съемка</div>
-			<div class="sub-header">Лютая вещь, очень рекомендую</div>
+			<!--div class="sub-header">Лютая вещь, очень рекомендую</div-->
 			<div class="album">
 				 <div class="" id="slider1">
 				 </div>
@@ -82,8 +82,8 @@
 			</div>
 		</div>
 		<div class="fotoset">
-			<div class="header">Фотосеты</div>
-			<div class="sub-header">Лютая вещь, очень рекомендую</div>
+			<div class="header">Портретная съёмка</div>
+			<!--div class="sub-header">Лютая вещь, очень рекомендую</div-->
 			<div class="album">
 				 <div class="" id="slider2">
 				 </div>
@@ -93,7 +93,7 @@
 		</div>
 		<div class="mary">
 			<div class="header">Свадебная съемка</div>
-			<div class="sub-header">Лютая вещь, очень рекомендую</div>
+			<!--div class="sub-header">Лютая вещь, очень рекомендую</div-->
 			<div class="album">
 				 <div class="" id="slider3">
 				 </div>
@@ -103,7 +103,7 @@
 		</div>
 		<div class="child">
 			<div class="header">Детская фотосъемка</div>
-			<div class="sub-header">Лютая вещь, очень рекомендую</div>
+			<!--div class="sub-header">Лютая вещь, очень рекомендую</div-->
 			<div class="album">
 				 <div class="" id="slider4">
 				 </div>
@@ -114,7 +114,7 @@
 		<div class="newborn">
 			<div class="header">Новорожденные</div>
 			
-			<div class="sub-header">Лютая вещь, очень рекомендую</div>
+			<!--div class="sub-header">Лютая вещь, очень рекомендую</div-->
 			<div class="album">
 				 <div class="" id="slider5">
 				 </div>
@@ -155,19 +155,19 @@
 			<div class="clear"></div>
 		</div>
 		<div class="reklamaz">
+ 
 		 <div class="header">Репортажная</div>
-				<iframe class="video" src="https://player.vimeo.com/video/227943731"  height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>xxxx</iframe> 
-			 
-			<div class="elem">
+				<iframe src="https://player.vimeo.com/video/239053940"  class="video"  height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>			 
+			<!--div class="elem">
 				<iframe class="video" src="https://player.vimeo.com/video/224194276" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>xxxxx</iframe> 
-			</div>
+			</div-->
 			<div class="clear"></div>
 		</div>
 	</div>
 </div>
 <div id="contact" class="block-contact">
 	<div class="block-content bg-contact">
-		<div class="gheader">КОНТАКТЫ</div>
+		<!--div class="gheader">КОНТАКТЫ</div-->
 		<div class="element-shema">
 			<div class="social">
 			<div class="header">Мы в соцсетях</div>
