--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 	<meta content="width" name="MobileOptimized"/>
 	<meta content="yes" name="apple-mobile-web-app-capable"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+	<link rel="shortcut icon" href="favicon.ico"/>
 	<link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8" />
 	<title>TVK</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
  	<link rel="stylesheet" type="text/css" href="js/fancybox/dist/jquery.fancybox.min.css"/>
+	<meta name="keywords" content="фото и видео,Репортажная съемка,Портретная съёмка,Свадебная съемка,Детская фотосъемка,Новорожденные,Реклама, Свадебная, Корпоративная, Репортажная, фото, видео, фото монтаж, видео монтаж"/>
+	<meta name="description" content="TVK_production - молодые и амбициозные люди, смотрящие на мир сквозь объектив фото и видео камеры!"/>
 </head>
 <body>
 <div class="block-head">
@@ -460,5 +463,34 @@ function loadImagesMary(i){
     clickContent    : false
     });
 </script>
+	<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+    (function (d, w, c) {
+        (w[c] = w[c] || []).push(function() {
+            try {
+                w.yaCounter48638636 = new Ya.Metrika({
+                    id:48638636,
+                    clickmap:true,
+                    trackLinks:true,
+                    accurateTrackBounce:true,
+                    webvisor:true
+                });
+            } catch(e) { }
+        });
+
+        var n = d.getElementsByTagName("script")[0],
+            s = d.createElement("script"),
+            f = function () { n.parentNode.insertBefore(s, n); };
+        s.type = "text/javascript";
+        s.async = true;
+        s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+        if (w.opera == "[object Opera]") {
+            d.addEventListener("DOMContentLoaded", f, false);
+        } else { f(); }
+    })(document, window, "yandex_metrika_callbacks");
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/48638636" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 </body>
 </html>
